# opplenty

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  tests.py
.github/workflows/: release.yml
opplenty/: chain.py  cli.py  inscribe.py  op_plenty.py  server.py  taproot.py  wallet.py
opplenty/web/: index.html
scripts/: install-termux-shortcut.sh
