[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opplenty"
version = "1.2.0"
description = "Wallet Taproot + inscription de données via OP_PLENTY (encodage par choix d'opcodes)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Silexperience"}]
dependencies = [
  "embit>=0.7.0",
  "cryptography>=42.0",
  "segno>=1.6",
]

[project.scripts]
opplenty = "opplenty.cli:main"
opplenty-web = "opplenty.server:main"

[tool.setuptools]
packages = ["opplenty"]

[tool.setuptools.package-data]
opplenty = ["web/*.html"]
